--- a/src/app/componentes/lista-livros/lista-livros.html
+++ b/src/app/componentes/lista-livros/lista-livros.html
@@ -5,3 +5,6 @@
   <span class="linha-destaque linha-destaque--grande">
   </span>
 </section>
+@for(genero of generos; track genero){
+  <app-genero-literario [genero]="genero" ></app-genero-literario>
+}
